회원가입 및 로그인

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/wave
+    url: jdbc:h2:tcp://localhost/~/wave;AUTO_SERVER=true
     username: sa
     password:
     driver-class-name: org.h2.Driver
